v1.3, not yet released
  * run subtests in a subshell to prevent them from interfering with
    the test environment
  * use file descriptor 9 for bailout message communication to reduce
    the chance of conflict with testcases
  * close unnecessary file descriptors before running testcases and
    subtests to prevent tests from interfering with the test
    environment
  * permit positional arguments for the testcase script

v1.2, released 2015-06-14
  * add t4s_give() for marking a prerequisite as satisfied

v1.1, released 2015-06-14
  * t4s_log() now prefixes each line with '# ' when not in a
    testcase (t4s_testcase() already prefixes lines written to
    stdout with '# ')
  * t4s_log() now reads stdin for lines to log if not given any
    arguments
  * t4s_testcase() now supports prerequisites for automatically
    skipping tests if certain previous tests failed (via the new
    --needs and --gives arguments)

v1.0, released 2015-06-12:
  * initial release